# TNN_Demo

./: README.md
android_TNN_Demo/: settings.gradle
android_TNN_Demo/app/: build.gradle
android_TNN_Demo/app/src/androidTest/java/com/wzt/tnn/: ExampleInstrumentedTest.java
android_TNN_Demo/app/src/main/: AndroidManifest.xml
android_TNN_Demo/app/src/main/assets/: nanodet_sim_opt.tnnproto
android_TNN_Demo/app/src/main/cpp/: CMakeLists.txt  NanoDet.cpp  NanoDet.h  Yolov5.cpp  Yolov5.h  jni_interface.cpp
android_TNN_Demo/app/src/main/cpp/tnn/tnn/: version.h
android_TNN_Demo/app/src/main/res/layout/: activity_welcome.xml
android_TNN_Demo/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android_TNN_Demo/app/src/main/res/values-night/: themes.xml
android_TNN_Demo/gradle/wrapper/: gradle-wrapper.properties
iOS_TNN_Demo/TNNDemo/: AppDelegate.h  AppDelegate.m  Info.plist  NanoDet.h  NanoDet.mm  ViewController.h  ViewController.mm  WelcomeVC.h  WelcomeVC.m  Yolov5.h  Yolov5.mm  main.m
iOS_TNN_Demo/TNNDemo.xcodeproj/: project.pbxproj
iOS_TNN_Demo/TNNDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS_TNN_Demo/TNNDemo/Assets.xcassets/tnn_icon.imageset/: Contents.json
iOS_TNN_Demo/TNNDemo/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
iOS_TNN_Demo/TNNDemo/opencv2.framework/Versions/A/Headers/: opencv_modules.hpp
iOS_TNN_Demo/TNNDemo/opencv2.framework/Versions/A/Resources/: Info.plist
iOS_TNN_Demo/TNNDemo/res/: nanodet_sim_opt.tnnmodel  yolov5s_sim_opt.tnnproto
iOS_TNN_Demo/TNNDemo/tnn.bundle/: tnn.metallib  tnn.simulator.metallib
iOS_TNN_Demo/TNNDemo/tnn.framework/: Info.plist
iOS_TNN_Demo/TNNDemo/tnn.framework/Headers/: version.h
(+6 files in other folders)
